# hepynet

./: .gitignore  .gitmodules  LICENSE.txt  README.md  loop_high_mass_point.sh  loop_low_mass_point.sh  setup.cfg  setup.py  setup_path.py
TRexFitter/: README.md
data/make_array_info/: README.md  norm_file_284500.txt  norm_file_300000.txt  norm_file_310000.txt
docker/: Dockerfile  build_docker.bat  build_docker.sh  start_docker.bat  start_docker.sh
docs/: array_preparing.md  config_preparing.md  example_cfg.ini  new_release_procedures.md
docs/develop/: new_release_procedures.md
hepynet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
hepynet/common/: array_utils.py  common_utils.py  config_default.py  config_utils.py  hepy_const.py  hepy_type.py
hepynet/data_io/: array_utils.py  feed_box.py  numpy_io.py  root_io.py
hepynet/evaluate/: evaluate_utils.py  importance.py  kinematics.py  metrics.py  mva_scores.py  roc.py  significance.py  train_history.py
hepynet/main/: execute.py  job_executor.py  job_utils.py
hepynet/make_array/: make_array.py
hepynet/train/: __init__.py  evaluate.py  hep_model.py  model.py  (+1 more)
lfv_pdnn_code_v1/: .gitignore
run/: dump_jungao_arrays.py  dump_jungao_arrays_rel_103.py  generate_new_array.py.bak  get_arrays.py  import_needed_modules.py  signal_stats_study.ipynb  train_example.ipynb  train_with_new_ntuple.ipynb  train_with_old_ntuple.ipynb
share/: default.ini  execute.py  job_utils.py  test.ini  test_include.ini  test_jungao_arrays.ini  test_paperspace.ini  test_para_scan.ini
test/: make_array_test.py
(+1316 files in other folders)
