[metadata]
name = hepynet
version = 0.4.1
author = Zhe Yang
author_email = starprecursor@gmail.com
description = High energy physics, python based, neural network framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StarPrecursor/hepynet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires= >=3.8, <3.9
install_requires=
    tensorflow==2.2.0
    keras==2.3.0
    numpy>=1.18.0
    pandas>=1.2.0
    wrapt<1.12.0
    atlas_mpl_style
    hyperopt
    matplotlib
    pyarrow
    scikit-learn
    seaborn
    black
    packaging

[options.entry_points]
console_scripts =
    hepynet=hepynet.main.execute:execute
